--- a/Lectures/04 Data Types/01 Basic Data Types.ipynb
+++ b/Lectures/04 Data Types/01 Basic Data Types.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -270,12 +270,12 @@
     }
    ],
    "source": [
-    "0b10"
+    "0b10 #0b = Binary and then the binary value is 10 which is 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -290,12 +290,12 @@
     }
    ],
    "source": [
-    "0o10"
+    "0o10 #0o = octal and then the octal value is 10 which is 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,34 @@
     }
    ],
    "source": [
-    "0x10"
+    "0x10 #0x = Hexadecimal and then the Hexadecimal value is 10 which is 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0b10 + 7 # binary value + real number "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### binary and octal and ... are integers"
    ]
   },
   {
@@ -628,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +670,7 @@
     }
    ],
    "source": [
-    "4.2e-4"
+    "4.2e-4 # 4.2 * 10^-4"
    ]
   },
   {
@@ -956,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -965,13 +992,14 @@
        "\"This string contains a single quote (') character.\""
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"This string contains a single quote (') character.\""
+    "\"This string contains a single quote (') character.\" \n",
+    "# we need to put parantheses to show ' and \""
    ]
   },
   {
@@ -1063,6 +1091,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This string contains a double quote \" character.'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"This string contains a double quote \\\" character.\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1071,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1128,7 @@
        "'abc'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1136,8 @@
    "source": [
     "'a\\\n",
     "b\\\n",
-    "c'"
+    "c'\n",
+    "# back slash allows python to go for new line"
    ]
   },
   {
@@ -1100,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1109,13 +1158,30 @@
        "'foo\\\\bar'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "'foo\\\\bar'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foo\\bar\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('foo\\\\bar')"
    ]
   },
   {
@@ -1267,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1345,8 @@
     }
    ],
    "source": [
-    "print(r'foo\\\\bar')  # As a raw string\n"
+    "print(r'foo\\\\bar')  # As a raw string\n",
+    "# in here because of r'' it not translating \\\\\n"
    ]
   },
   {
@@ -1318,6 +1385,29 @@
    "metadata": {},
    "source": [
     "They're also perfect for strings that span multiple lines:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a\\nstring that spans\\nacross several lines'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"This is a\n",
+    "string that spans\n",
+    "across several lines\"\"\"\n",
+    "# in here it shows the \\n "
    ]
   },
   {
@@ -1396,6 +1486,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(0) # only 0 is translated to False "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(-3235432552345)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool([]) #empty list is False"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1449,7 +1599,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1463,7 +1613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4
  },
