--- a/Lectures/04 Data Types/02 Variables.ipynb
+++ b/Lectures/04 Data Types/02 Variables.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,13 +33,22 @@
        "5.3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "5.3"
+    "5.3 \n",
+    "# 5.3 is an object ... it means its like a box containing 5.3\n",
+    "# True is an object...it means its like a box containing True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### objects can be int or float or human or ...\n"
    ]
   },
   {
@@ -65,7 +74,8 @@
     "\n",
     "In this lesson, we'll learn about two important things:\n",
     "- **Objects**: Think of this as a box that can hold any type of data.\n",
-    "- **Variables**: These are like labels for our boxes. They help us know and use what's inside the box.\n"
+    "- **Variables**: These are like labels for our boxes. They help us know and use what's inside the box.\n",
+    "**Variables** are pointing to the **Objects**\n"
    ]
   },
   {
@@ -177,6 +187,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In here we are changing the object for variable n we call this DYNAMIC TYPING"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -205,11 +222,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = b = c = 300"
+    "a = b = c = 300 "
    ]
   },
   {
@@ -479,8 +496,8 @@
    "source": [
     "There's a style guide for Python called PEP 8. It gives advice on naming:\n",
     "\n",
-    "- Use Snake Case for variables and functions.\n",
-    "- Use Pascal Case for class names."
+    "- ### Use Snake Case for variables and functions.\n",
+    "- ### Use Pascal Case for class names."
    ]
   },
   {
@@ -586,6 +603,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Here is a list of the Python keywords.  Enter any keyword to get more help.\n",
+      "\n",
+      "False               class               from                or\n",
+      "None                continue            global              pass\n",
+      "True                def                 if                  raise\n",
+      "and                 del                 import              return\n",
+      "as                  elif                in                  try\n",
+      "assert              else                is                  while\n",
+      "async               except              lambda              with\n",
+      "await               finally             nonlocal            yield\n",
+      "break               for                 not                 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(\"keywords\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -641,12 +687,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "PI = 3.14159\n",
-    "MAX_SIZE = 100"
+    "MAX_SIZE = 100 # it means that dont change this variabel please!"
    ]
   },
   {
@@ -762,7 +808,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -776,7 +822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4
  },
