--- a/Lectures/04 Data Types/03 Conversion Between Data Types.ipynb
+++ b/Lectures/04 Data Types/03 Conversion Between Data Types.ipynb
@@ -135,19 +135,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "integer_number = 123\n",
     "float_number = 1.23\n",
     "\n",
-    "new_number = integer_number + float_number"
+    "new_number = integer_number + float_number\n",
+    "#its changing integer_number into float to prevent date loss\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Implicit type casting**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -223,6 +231,13 @@
     "**Example: Addition of string and integer using Explicit Conversion**\n",
     "\n",
     "Consider a scenario where we have a string representing a number and an integer. To add them, we need to perform explicit type conversion."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **We are casting types (Explicit type casting)**"
    ]
   },
   {
@@ -350,7 +365,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -364,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4
  },
