--- a/Lectures/04 Data Types/05 Objects in Python.ipynb
+++ b/Lectures/04 Data Types/05 Objects in Python.ipynb
@@ -79,6 +79,200 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getnewargs__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'capitalize',\n",
+       " 'casefold',\n",
+       " 'center',\n",
+       " 'count',\n",
+       " 'encode',\n",
+       " 'endswith',\n",
+       " 'expandtabs',\n",
+       " 'find',\n",
+       " 'format',\n",
+       " 'format_map',\n",
+       " 'index',\n",
+       " 'isalnum',\n",
+       " 'isalpha',\n",
+       " 'isascii',\n",
+       " 'isdecimal',\n",
+       " 'isdigit',\n",
+       " 'isidentifier',\n",
+       " 'islower',\n",
+       " 'isnumeric',\n",
+       " 'isprintable',\n",
+       " 'isspace',\n",
+       " 'istitle',\n",
+       " 'isupper',\n",
+       " 'join',\n",
+       " 'ljust',\n",
+       " 'lower',\n",
+       " 'lstrip',\n",
+       " 'maketrans',\n",
+       " 'partition',\n",
+       " 'removeprefix',\n",
+       " 'removesuffix',\n",
+       " 'replace',\n",
+       " 'rfind',\n",
+       " 'rindex',\n",
+       " 'rjust',\n",
+       " 'rpartition',\n",
+       " 'rsplit',\n",
+       " 'rstrip',\n",
+       " 'split',\n",
+       " 'splitlines',\n",
+       " 'startswith',\n",
+       " 'strip',\n",
+       " 'swapcase',\n",
+       " 'title',\n",
+       " 'translate',\n",
+       " 'upper',\n",
+       " 'zfill']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = \"str\"\n",
+    "dir(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__abs__',\n",
+       " '__add__',\n",
+       " '__and__',\n",
+       " '__bool__',\n",
+       " '__ceil__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__divmod__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__float__',\n",
+       " '__floor__',\n",
+       " '__floordiv__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getnewargs__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__index__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__int__',\n",
+       " '__invert__',\n",
+       " '__le__',\n",
+       " '__lshift__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__neg__',\n",
+       " '__new__',\n",
+       " '__or__',\n",
+       " '__pos__',\n",
+       " '__pow__',\n",
+       " '__radd__',\n",
+       " '__rand__',\n",
+       " '__rdivmod__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rfloordiv__',\n",
+       " '__rlshift__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__ror__',\n",
+       " '__round__',\n",
+       " '__rpow__',\n",
+       " '__rrshift__',\n",
+       " '__rshift__',\n",
+       " '__rsub__',\n",
+       " '__rtruediv__',\n",
+       " '__rxor__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__sub__',\n",
+       " '__subclasshook__',\n",
+       " '__truediv__',\n",
+       " '__trunc__',\n",
+       " '__xor__',\n",
+       " 'as_integer_ratio',\n",
+       " 'bit_count',\n",
+       " 'bit_length',\n",
+       " 'conjugate',\n",
+       " 'denominator',\n",
+       " 'from_bytes',\n",
+       " 'imag',\n",
+       " 'numerator',\n",
+       " 'real',\n",
+       " 'to_bytes']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 2\n",
+    "dir(x)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -137,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,6 +380,13 @@
    "metadata": {},
    "source": [
     "<img src=\"./images/object-identity/2.png\" width=\"400\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "kian is still alive here and python it self will look and find out its not used and it will delete kian"
    ]
   },
   {
@@ -220,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,14 +430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4355096880\n"
+      "4446135920\n"
      ]
     }
    ],
@@ -275,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -302,10 +503,23 @@
      "text": [
       "True\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' is , is looking for similar id()(memory location)\\nwhich means they are exact objects not \\njust having same value'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(name1 is name2)"
+    "print(name1 is name2)\n",
+    "''' is , is looking for similar id()(memory location)\n",
+    "which means they are exact objects not \n",
+    "just having same value'''"
    ]
   },
   {
@@ -333,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +566,7 @@
        "False"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +586,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,18 +656,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = 10\n",
-    "b = a\n",
+    "b = a # pointing to 1 memory location\n",
     "c = b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +676,7 @@
        "True"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +696,7 @@
        "True"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,6 +717,16 @@
    "metadata": {},
    "source": [
     "**Best Practice**: If you want a separate copy of the object, you need to use methods like `copy()` or `deepcopy()` for complex objects which will be covered later in this course."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "python will save only 1 location in memory for numbers for example:\n",
+    "a = 5\n",
+    "b = 5\n",
+    "python will not point to different location in memory and py is doing this for -5 to 256 and the rest will not work this way"
    ]
   },
   {
@@ -534,7 +758,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -548,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4
  },
