--- a/Lectures/04 Data Types/08 String Methods.ipynb
+++ b/Lectures/04 Data Types/08 String Methods.ipynb
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -428,14 +428,15 @@
        "'hello Python'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "text = \"hello world\"\n",
-    "text.replace(\"world\", \"Python\")"
+    "text.replace(\"world\", \"Python\") # its making a copy of text \n",
+    "# because str are immutable"
    ]
   },
   {
@@ -527,6 +528,27 @@
    "source": [
     "text = \"hello,world\"\n",
     "text.split(\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hello', 'world']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = \"hello world\"\n",
+    "text.split() # split by space as default"
    ]
   },
   {
@@ -718,7 +740,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -732,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4
  },
