--- a/Lectures/04 Data Types/08 String Methods.ipynb
+++ b/Lectures/04 Data Types/08 String Methods.ipynb
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,11 +654,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello, world!'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "s = \"h\" + s[1:]"
+    "s = \"h\" + s[1:]\n",
+    "s"
    ]
   },
   {
